# EdgeDemo-RealTime-EdgeDetection

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/edgedemo/: Camera2Source.kt  GLRenderer.kt  MainActivity.kt
app/src/main/jni/: edge_native.cpp
app/src/main/res/layout/: activity_main.xml
web/: index.html  package.json
web/src/: index.ts
